@@ -730,4 +730,5 @@ int ax::NodeEditor::GetNodeCount()
 
 int ax::NodeEditor::GetOrderedNodeIds(NodeId* nodes, int size)
 {
+    return s_Editor->GetNodeIds(nodes, size);
 }
