@@ -103,6 +103,10 @@ v0.9.1 (WIP):
         New API:
             int GetNodeCount();                                // Returns number of submitted nodes since Begin() call
 
+    NEW: Editor can now return nodes in order they are drawn (#81)
+        New API:
+            int GetOrderedNodeIds(NodeId* nodes, int size);    // Fills an array with node id's in order they're drawn; up to 'size` elements are set. Returns actual size of filled id's.
+
     NEW: Editor now allow to set Z position for nodes (#109)
 
         Nodes with higher Z position are drawn on top of ones with lower.
